@@ -18,13 +18,13 @@ if(isset($_GET['type']) && $_GET['type'] != ''):
 
 		case "stock":
 			echo 'Doing Stock Sync<br/>';
-			Fincon_Woocommerce_Admin::sync_stock_items();
+			Fincon_Woocommerce_Admin::sync_stock_items(true);
 			echo 'Finished Stock Sync<br/>';
 		break;
 
 		case "users":
 			echo 'Doing User Sync<br/>';
-			Fincon_Woocommerce_Admin::sync_user_items();
+			Fincon_Woocommerce_Admin::sync_user_items(true);
 			echo 'Finished User Sync<br/>';
 		break;
 
@@ -39,10 +39,10 @@ if(isset($_GET['type']) && $_GET['type'] != ''):
 			Fincon_Woocommerce_Admin::check_api();
 			echo 'Finished Connection Sync<br/>';
 			echo '<br/>Doing Stock Sync<br/>';
-			Fincon_Woocommerce_Admin::sync_stock_items();
+			Fincon_Woocommerce_Admin::sync_stock_items(true);
 			echo 'Finished Stock Sync<br/>';
 			echo '<br/>Doing User Sync<br/>';
-			Fincon_Woocommerce_Admin::sync_user_items();
+			Fincon_Woocommerce_Admin::sync_user_items(true);
 			echo 'Finished User Sync<br/>';
 			echo '<br/>Doing Log Clean<br/>';
 			Fincon_Woocommerce_Admin::clean_logs();
