@@ -1,5 +1,6 @@
 = 1.3.0 - September 9, 2020 =
 * Feature: Sync Product Images
+* Feature: Batch Processing
 * Feature: Different Stock Location for orders
 * Feature: Multiple Stock Locations for products
 * Feature: PHP Error logging
